# esphome-tests

./: .gitignore  .gitmodules  24 bit colour support summary.md  24 bit support summary.md  actron-climate-test.yaml  actron-test-bits.yaml  deinyon-ac-remote-device.yml  deinyon-ac-remote-host.yml  deinyon-ac-remote-ui.yml  deinyon-climate-device.yml  deinyon-climate-host.yml  deinyon-climate-ui.yml  deinyon-climate-ui2.yml  deinyon-climate-ui3.yml  deinyon-touch-test.yml  deinyon-wall-controller-ui-host.yaml  deinyon-wall-controller-ui.yml  deinyon-wall-controller.yaml  hello-rgb.yml  lvgl-test.yml  waveshare-amoled-test.yaml  waveshare-p4-7.yaml  waveshare-touch-4-3.yaml
assets/: circle_icon.af  circle_icon.af~lock~  glow-bg.af  glow-btm.af  glow-btm.af~lock~
components/actron_b812/: actron_b812.cpp  actron_b812.hpp  climate.py
components/display/: display.cpp  display_color_utils.h
components/image/: image.cpp
components/lvgl/: __init__.py  lvgl_esphome.cpp  lvgl_esphome.h
components/mipi_dsi/: mipi_dsi.cpp  mipi_dsi.h
tests/: CMakeLists.txt  run_tests.sh  test_compressor_protection.cpp
tests/mocks/esphome/components/binary_sensor/: binary_sensor.h
tests/mocks/esphome/components/climate/: climate.h
tests/mocks/esphome/components/remote_transmitter/: remote_transmitter.h
tests/mocks/esphome/components/sensor/: sensor.h
tests/mocks/esphome/components/switch/: switch.h
tests/mocks/esphome/components/text_sensor/: text_sensor.h
tests/mocks/esphome/components/time/: real_time_clock.h
tests/mocks/esphome/core/: component.h  log.h
